namespace Library;

public class Celda
{
    public Coordenada Coordenada { get; }
    
    public Celda(Coordenada coordenada)
    {
        this.Coordenada = coordenada;
    }
}
