@startuml PIIProyecto2025


package "age" {

    class Facade {
    + NuevoJuego(idJuego: String): String
    + UnirseJuego(idJuego: String, nombrePlayer: String, civilizacion: String): String
    + ProcesarComando(idJuego: String, nombrePlayer: String, comando: String): String
    + obtenerEstado(idJuego: String, Player: String): String
    - mapa: Mapa
    - Playeres: List<Player>
    - turnoActual: int
    + iniciarJuego()
    + avanzarTurno()
    + obtenerEstado()
    + verificarVictoria(): boolean
    + obtenerGanador(): Player
    }

    class Player {
        - nombre: String
        - civilizacion: Civilizacion
        - recurso: Recurso
        - aldeanos: List<Aldeano>
        - edificios: List<Edificio>
        - accesible
        - poblacionActual: int
        - poblacionMaxima: int
        + InicializarJuego()
        + Victoria(): boolean
        + PuedeCrearUnidad(): boolean
        + recolectarRecurso(tipo: TipoRecurso, ubicacion: Coordenada, nombre: String)
        + construir(edificio: Edificio, ubicacion: Coordenada)
        + TieneRecurso(): boolean
        + GastarRecuerso()
        + GetAldeanoDisponible()
    }

    class Mapa {
        + Size: int
        + celdas: List<Celda>
        + obtenerCelda(coordenada: Coordenada): Celda
    }

    class Celda {
        + coordenada: Coordenada
    }

    class Coordenada {
        + x: int
        + y: int
        + Coordenada(X, Y)
        + EsValida(): boolean
    }

    class TipoRecurso {
        Alimento
        Madera
        Oro
        Piedra
        - TipoRecurso(nombre)
    }

    class RecursoPlayer {
        - alimento: int
        - madera: int
        - oro: int
        - piedra: int
        + tipo: TipoRecurso
        + cantidad: int
        + agregar(tipo: TipoRecurso, cantidad: int)
        + consumir(tipo: TipoRecurso, cantidad: int): boolean
        + RecursoPlayer(tipo, cantidad)
    }

    class Civilizacion {
        + nombre: String
        + bonificaciones: List<String>
        + CivDisponibles: List<String>
    }

    abstract class Edificio {
        + ubicacion: Coordenada
        + vida: int
        + owner: Player
        + resistencia: int
        + Almacenar(RecursoPlayer)
        + ObtenerCosto()
    }

    class CentroCivico extends Edificio {
        + capacidadAldeanos: int
        - Aldeanos: List<Aldeanos>
        + AlojarAldeano(Aldeano): boolean
        + SacarAldeano(Aldeano)
        + CapacidadRestante()
        + ObtenerCosto()
    }

    class Almacen extends Edificio {
        + tipo: TipoRecurso
        + capacidad: int
        + ObtenerCosto()
    }

    class Casa extends Edificio {
        + CapacidadMaxima: int
        + capacidadPoblacion: int
        + ObtenerCosto()
    }

    class Cuartel extends Edificio {  
        + entrenarInfanteria(id)
        + entrenarArquero(id)
        + entrenarCaballeria(id)
        + ObtenerCosto 
    }

    abstract class Unidad { 
        + id: int
        + ubicacion: Coordenada
        + vida: int
        + velocidad: int
        + owner: Player
        + EstaMuerto(): boolean
        + RecibirDefensa()
        + RecibirDamage()
        + Mover(NuevaUbicacion)
    }

    class Aldeano extends Unidad {
        - Ocupado: boolean
        + Mover(coordenada: NuevaUbicacion)
        + EstaDisponible()
        + recolectar(TipoRecurso: tipo, coordenada: ubicacion)
    }

    class UnidadMilitar extends Unidad {
        + ataque: int
        + defensa: int
        - cantidad
        + RecibirDamage(damage)
        + Mover(NuevaUbicacion)
        + atacar(objetivo)
        + Defender()
         
    }

    class Infanteria extends UnidadMilitar {
        + ataque: int 
        + defensa: int
    
    }

    class Arquero extends UnidadMilitar {
        + ataque: int 
        + defensa: int 
    }

    class Caballeria extends UnidadMilitar {
        + ataque: int 
        + defensa: int 
    }
    
    RecursoPlayer --> TipoRecurso
    Almacen --> TipoRecurso
    Player --> Coordenada
    Celda --> Coordenada
    Unidad --> Coordenada
    Edificio --> Coordenada
    Juego "1" --> "*" Player
    Player "1" --> "1" Civilizacion
    Player "1" --> "1" RecursoPlayer
    Mapa "1" --> "*" Celda

}

@enduml
